[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xu60"
dynamic = ["version"]
dependencies = [
  "starlette~=0.50.0",
  "pygit2~=1.19.0"
]
requires-python = ">=3.11"
authors = [
  {name = "Raymond Finzel", email = "github@rfinz.mozmail.com"},
]
description = "needed now more than ever"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["versioning", "hypertext", "web", "api", "content addressing"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Other Audience",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Topic :: Internet",
  "Topic :: Software Development :: Version Control",
  "Topic :: Artistic Software"
]

[project.optional-dependencies]
server = ["uvicorn"]

[project.urls]
Repository = "https://github.com/rfinz/xu60.git"

[tool.hatch.version]
path = "xu60/__init__.py"
